--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-hiiii
+</!DOCTYPE html>
+<html>
+	<head>
+		<title>New York Times Search</title>
+		<!-- link to bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!-- link to css -->
+		<link rel="stylesheet" href="css.css">
+		<!-- link to javascript -->
+		<sript type="text/javascript" src="js.js"></sript>
+	</head>
+
+<body>
+	<div id="wrapper">
+	<header>
+		<h1>hi</h1>
+	</header>
+	</div>
+</body>
+</html>
