--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-</!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>New York Times Search</title>
@@ -7,10 +7,16 @@
 		<!-- link to css -->
 		<link rel="stylesheet" href="css.css">
 		<!-- link to javascript -->
-		<sript type="text/javascript" src="js.js"></sript>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js.js"></script>
+
+
 	</head>
 
 <body>
+
+
+
 	<div id="wrapper">
 	<header>
 		<h1>hi</h1>
